--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Productos:</h1>
 <% @products.each do |product| %>
-  <%= link_to product_path(product.id) do %>
+  <%= link_to product_path(product.id), class: 'product' do %>
     <h1><%= product.title %></h1>
     <span><%= product.price %>$</span>
   <% end %>
