--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,3 +5,7 @@
 <span class='price'><%= @product.price %>$</span>
 
 <%= link_to "Editar producto", edit_product_path(@product) %>
+<%= link_to "Eliminar producto", product_path(@product), data: { 
+  turbo_method: :delete,
+  turbo_confirm: '¿Estas seguro?'
+} %>
