--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= image_tag @product.photo, width: 200 if @product.photo.attached? %>
+</div>
+
 <h1 class='title'><%= @product.title %></h1>
 
 <p class='description'><%= @product.description %></p>
