--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,5 +11,5 @@
 <%= link_to "Editar producto", edit_product_path(@product) %>
 <%= link_to "Eliminar producto", product_path(@product), data: { 
   turbo_method: :delete,
-  turbo_confirm: '¿Estas seguro?'
+  turbo_confirm: t('common.confirm')
 } %>
