--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-  <%= link_to product_path(product.id), class: 'product' do %>
+  <%= link_to product_path(product.id), class: 'product', 'data_turbo_frame': '_top' do %>
     <%= image_tag product.photo, width: 100 if product.photo.attached? %>
     <h1><%= product.title %></h1>
     <span><%= product.price %>$</span>
