--- a/app/views/authentication/users/new.html.erb
+++ b/app/views/authentication/users/new.html.erb
@@ -7,12 +7,12 @@
 
   <div>
     <%= form.label :email %>
-    <%= form.email_field :email %>
+    <%= form.email_field :email, required: true %>
   </div>
 
   <div>
     <%= form.label :username %>
-    <%= form.text_field :username %>
+    <%= form.text_field :username, required: true %>
   </div>
 
   <div>
