--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,3 +18,4 @@
 
 <%= render partial: "favorite", locals: { product: @product } %>
 
+<div data-controller="websocket-product" data-productid="<%= @product.id %>"></div>
