video 55: refactor con turbo streams

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,4 @@
-<div>
-  <%= image_tag @product.photo, width: 200 if @product.photo.attached? %>
-</div>
-
-<h1 class='title'><%= @product.title %></h1>
-
-<p class='description'><%= @product.description %></p>
-
-<span class='price'><%= @product.price %>$</span>
+<%= render partial: 'products/product_details', locals: { product: @product } %>
 
 <%= link_to "Editar producto", edit_product_path(@product) if @product.owner? %>
 <%= link_to "Eliminar producto", product_path(@product), data: { 
@@ -18,4 +10,5 @@
 
 <%= render partial: "favorite", locals: { product: @product } %>
 
-<div data-controller="websocket-product" data-productid="<%= @product.id %>"></div>
+<%= turbo_stream_from @product %>
+
